Made plugin work with java 11
Who would've thought that Process would become autocloseable in java
25? Change to older syntax so more people can use this plugin.